[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/theater-cards.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TheaterCard.gd" type="Script" id=2]

[node name="TheaterCard" type="Button"]
margin_right = 105.0
margin_bottom = 75.0
rect_min_size = Vector2( 109, 79 )
flat = true
script = ExtResource( 2 )

[node name="Border" type="ColorRect" parent="."]
margin_left = -3.72529e-09
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 109, 79 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="theater-cards" type="Sprite" parent="."]
position = Vector2( 2, 2 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -1050 )
hframes = 4
[connection signal="mouse_entered" from="." to="." method="_on_TheaterCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TheaterCard_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_TheaterCard_pressed"]
